--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header></header>
     <div class='main-and-sidebar-wrapper'>
-        <section class='main'></section>
-        <aside class='sidebar'></aside>
+        <section class='main'>PRINCIPAL</section>
+        <aside class='sidebar'>AZURE STATIC WEB +  GITHUB </aside>
  </div>
  <footer></footer>
     
