--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class='main-and-sidebar-wrapper'>
         <section class='main'>PRINCIPAL</section>
         <aside class='sidebar'>AZURE STATIC WEB +  GITHUB </aside>
+        <P><a href="https://medium.com/@kevin_comba/hosting-your-student-portfolio-for-free-on-azure-static-web-apps-ecac2b75300c">Link al proceso </a></P>
  </div>
  <footer></footer>
     
